--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <span>The Insight Hub</span>
+            <a href="/index.js"><span>The Insight Hub</span></a>
         </nav>
     </header>
     
