--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,6 +1,7 @@
 <%- include("partials/header.ejs") %>
 
 <div class="container">
+    <h2 class="section-title">Update Post</h2>
     <form action="/edit_post/<%= postId %>" method="post" class="form">
         <label for="title">Title :</label>
         <input type="text" name="title" value="<%= title %>" placeholder="Title">
