--- a/views/post.ejs
+++ b/views/post.ejs
@@ -2,9 +2,8 @@
 
 
 <div class="container">
-    <h2 class="section-title">Write your blog!</h2>
     <form action="/create_post" method="post" class="form">
-        <label for="title">Author :</label>
+        <label for="author">Author :</label>
         <input type="text" name="author" id="author" placeholder="Author">
 
         <label for="title">Title :</label>
