--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,7 +103,7 @@ nav span {
     gap: 1rem;
     background-color: #f7f4f2;
     padding: 1rem;
-    box-shadow:  0 6px 20px 0 rgba(0, 0, 0, 0.15)
+    box-shadow:  0 6px 20px 0 rgba(0, 0, 0, 0.20)
 }
 
 .post-card h4 {
@@ -161,7 +161,7 @@ nav span {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 93vh;
+    height: 90vh;
 }
 
 .form {
@@ -172,7 +172,7 @@ nav span {
     height: 900px;
     padding: 2rem;
     background-color:#f7f4f2;
-    box-shadow:  0 6px 20px 0 rgba(0, 0, 0, 0.15);
+    box-shadow:  0 6px 20px 0 rgba(0, 0, 0, 0.20);
 }
 
 .form label {
@@ -221,7 +221,7 @@ nav span {
     grid-template-columns: minmax(350px, 900px);
     grid-template-rows: minmax(350px, auto);
     padding: 2rem;
-    box-shadow:  0 6px 20px 0 rgba(0, 0, 0, 0.15);
+    box-shadow:  0 6px 20px 0 rgba(0, 0, 0, 0.20);
 }
 
 .viewpost-info {
@@ -293,38 +293,42 @@ nav span {
 
 @media(max-width: 600px) {
     nav span {
-        font-size: 2.3rem;
+        font-size: 2rem;
+        margin: 5px 0px;
     }
     .hero{
-        height: 35vh;
+        height: 45vh;
     }
     .hero-content {
         padding: 10px;
         width: 350px;
+        gap: 20px;
+        height: 75%;
     }
+    
     .hero-content span {
-        font-size: 15px;
+        font-size: 12px;
        }
     .hero-content h1 {
-           font-size: 2.1rem;
+           font-size: 1.6rem;
        }
     .hero-content p {
            font-size: 15px;
            font-weight: 300;
     }
     .post-btn {
-        padding: 10px 20px;
-        font-size: 16px;
-        width: 9rem;
-        height: 3rem;
+        padding: 10px;
+        font-size: 12px;
+        width: 7rem;
+        height: 2.5rem;
     
     }
     .post-container {
-        padding: 2rem;
+        padding: 2rem 1rem;
     }
 
     .post-card h2 {
-        font-size: 1.6rem;
+        font-size: 1.4rem;
     }
     
     .post-card p { 
@@ -338,13 +342,13 @@ nav span {
     }
 
     .container {
-        padding: 0 1rem;
+        padding: 0 0.8rem;
     }
 
     .form {
         padding: 10px;
         width: 350px;
-        height: 800px;
+        height: 550px;
     }
     
     .form label {
@@ -362,7 +366,7 @@ nav span {
     
     .form textarea {
         width: 100%;
-        height: 600px;
+        height: 100%;
         padding: 10px;
         font-size: 0.9rem;
     }
